
=======================================================
            WanT code:  Log of Changes 
=======================================================


Oct 08 2010      test15 added. bug fixed in sumpdos.f90. (AF)

Oct 07 2010      conductor writes kdata also resolved wrt eigenchannels. (AF)

Oct 06 2010      plot.x program updated to deal with kpt when plotting 
                 eigenchannels. Checks performed. (AF)

Sep 29 2010      bug fixed in plot; bug fixed in hamiltonian_calc; qexml.f90
                 lib updated to take into account a bug fixed in QE. (AF)

Sep 28 2010      bug fixed: non-hermiticity of resulting hamiltonian 
                 on the wannier basis avoided. Verbosity added to all postprocs. 
                 Documentation updated. Test14 added to check embed. 
                 Version updated to 2.4.0-alpha2. (AF)

Jul 07 2010      bug fixed in the definition of eigenchannel orbitals.
                 plot procedure extended to eigenchannels. test11 updated. 
                 At the moment the plotting utility is not working when parallel 
                 kpts are used in transport. 
                 version number changed to 2.4.0-alpha (AF)

Jun 10 2010      bug fix in midpoint.f90: input_from_file called
                 with a wrong interface. Problem reported by Deborah Prezzi. (AF)

May 26 2010      configure flag --enable-etsf-io removed. (AF)

May 11 2010      Error given on reading pseudo when built-in DFT functionals
                 are different changed to a warning. (AF)

May 08 2010      Small inconsistency in the definition of kpt-weights in dos.x
                 fixed. (AF)

May 02 2010      fmt "internal" added to available choices. Postprocs
                 able to start from want files only. (AF)


-------------------------------------------------
Date: 15 Apr 2010    Version: WanT-2.3.0
-------------------------------------------------

Apr 11 2010      WanT manual updated. (AF)
